feat(alicloud): inventory and clean up registry namespaces and repositories, logstores and VPN servers
